[gd_scene load_steps=45 format=3 uid="uid://bct46bkjrtmf0"]

[ext_resource type="Script" path="res://scripts/entities/enemies/base_enemy.gd" id="1_ldka1"]
[ext_resource type="PackedScene" uid="uid://cuc6xpjjjqomm" path="res://prefabs/entities/modules/hurtbox.tscn" id="2_olipg"]
[ext_resource type="Texture2D" uid="uid://cdx7twt2164gl" path="res://assets/art/enemies/enemy_goop.png" id="4_3mag4"]
[ext_resource type="AudioStream" uid="uid://bylwo86pgqomn" path="res://assets/audio/entity_sounds/entity_small_hurt.wav" id="5_3g1d5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gec7d"]
size = Vector2(14, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_h76gk"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_18jfd"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_17ygj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wdb7g"]
atlas = ExtResource("4_3mag4")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hywmr"]
atlas = ExtResource("4_3mag4")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y4cv"]
atlas = ExtResource("4_3mag4")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn4s8"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_koxil"]
atlas = ExtResource("4_3mag4")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r44t1"]
atlas = ExtResource("4_3mag4")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx13x"]
atlas = ExtResource("4_3mag4")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7fou"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w04f4"]
atlas = ExtResource("4_3mag4")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ds2j"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvcty"]
atlas = ExtResource("4_3mag4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ima"]
atlas = ExtResource("4_3mag4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc0dh"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsk3c"]
atlas = ExtResource("4_3mag4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxte2"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8l1n"]
atlas = ExtResource("4_3mag4")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmsoa"]
atlas = ExtResource("4_3mag4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoxbh"]
atlas = ExtResource("4_3mag4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdc27"]
atlas = ExtResource("4_3mag4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nicej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdb7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hywmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y4cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn4s8")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koxil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r44t1")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx13x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7fou")
}],
"loop": true,
"name": &"idle_side",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w04f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ds2j")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvcty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ima")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc0dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ima")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsk3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxte2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8l1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxte2")
}],
"loop": true,
"name": &"move_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmsoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoxbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdc27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoxbh")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ickub"]
atlas = ExtResource("4_3mag4")
region = Rect2(32, 48, 16, 16)

[sub_resource type="Animation" id="Animation_hrdht"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeadSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_37pk3"]
resource_name = "idle_down"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_byj1s"]
resource_name = "idle_left"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_side"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3yq3y"]
resource_name = "idle_right"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_side"]
}

[sub_resource type="Animation" id="Animation_f3cj1"]
resource_name = "idle_up"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eo2a5"]
resource_name = "move_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x8c48"]
resource_name = "move_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move_side"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rjvov"]
resource_name = "move_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move_side"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pye3y"]
resource_name = "move_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jinrg"]
resource_name = "die"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77nxj"]
_data = {
"RESET": SubResource("Animation_hrdht"),
"die": SubResource("Animation_jinrg"),
"idle_down": SubResource("Animation_37pk3"),
"idle_left": SubResource("Animation_byj1s"),
"idle_right": SubResource("Animation_3yq3y"),
"idle_up": SubResource("Animation_f3cj1"),
"move_down": SubResource("Animation_eo2a5"),
"move_left": SubResource("Animation_x8c48"),
"move_right": SubResource("Animation_rjvov"),
"move_up": SubResource("Animation_pye3y")
}

[sub_resource type="Animation" id="Animation_x7l21"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sxafs"]
resource_name = "death"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.25098, 0.25098, 0.25098, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_c2f4f"]
resource_name = "hurt"
length = 0.2
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -8), Vector2(0, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pq0ah"]
_data = {
"RESET": SubResource("Animation_x7l21"),
"death": SubResource("Animation_sxafs"),
"hurt": SubResource("Animation_c2f4f")
}

[node name="Goop" type="CharacterBody2D" node_paths=PackedStringArray("HURTBOX", "HITBOX") groups=["body"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ldka1")
HURTBOX = NodePath("Hurtbox")
HITBOX = NodePath("Hitbox")
hostile = true
wander = true
speed = 20.0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gec7d")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
position = Vector2(0, -7)
rect = Rect2(-50, -50, 100, 100)

[node name="EnemySight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="EnemySightArea" type="CollisionShape2D" parent="EnemySight"]
visible = false
shape = SubResource("CircleShape2D_h76gk")

[node name="Hurtbox" parent="." groups=["enemy"] instance=ExtResource("2_olipg")]
position = Vector2(0, -2)
collision_layer = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_18jfd")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_17ygj")

[node name="RayCasts" type="Node2D" parent="."]

[node name="EnemyRayCast" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 0)
collision_mask = 25
collide_with_areas = true

[node name="WallRayCasts" type="Node2D" parent="RayCasts"]
visible = false

[node name="WallUpRayCast" type="RayCast2D" parent="RayCasts/WallRayCasts"]
target_position = Vector2(0, -18)

[node name="WallDownRayCast" type="RayCast2D" parent="RayCasts/WallRayCasts"]
target_position = Vector2(0, 18)

[node name="WallLeftRayCast" type="RayCast2D" parent="RayCasts/WallRayCasts"]
target_position = Vector2(-18, 0)

[node name="WallRightRayCast" type="RayCast2D" parent="RayCasts/WallRayCasts"]
target_position = Vector2(18, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_nicej")
animation = &"idle_down"

[node name="DeadSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -7)
texture = SubResource("AtlasTexture_ickub")

[node name="AttackSpeedTimer" type="Timer" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AI_Tick" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AI_WanderTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_77nxj")
}

[node name="AnimationPlayerEffects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pq0ah")
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("5_3g1d5")
bus = &"SFX"
